# old-programming-technology

./: Readme.md
lab-1/prog/1Lab/: 1Lab.csproj  1Lab.sln  Class1.cs
lab-1/tests/ArrayOperationsTests/: ArrayOperationsTests.csproj  Test1.cs
lab-10/: report.md
lab-10/project/: CMakeLists.txt
lab-10/project/diagrams/: Remove.dot  Union.dot
lab-10/project/include/: utset.h
lab-10/project/src/: main.cpp
lab-10/project/tests/: SetTests.cpp
lab-2/: expl.md  report.md  task.md
lab-2/MatrixSolution/ControlGraph/: MatrixSolution.sln  max_diag.dot  sum_even.dot
lab-2/MatrixSolution/MatrixLibrary/: MatrixOperations.cs
lab-2/MatrixSolution/MatrixLibrary.Tests/: MatrixLibrary.Tests.csproj  MatrixOperationsTests.cs
lab-2/project/: CMakeLists.txt  README.md
lab-2/project/correct_diagrams/: maxOnAndBelowMainDiagonal.dot  min3.dot  sumEvenIndexSum.dot
lab-2/project/diagrams/: maxOnAndBelowMainDiagonal.dot  min3.dot  sumEvenIndexSum.dot
lab-2/project/include/: MyLib.h
lab-2/project/src/: MyLib.cpp
lab-2/project/tests/: MyLibTests.cpp
lab-3/: expl.md  report.md  task.md
lab-3/NumberUtilsSolution/: CMakeLists.txt
lab-3/NumberUtilsSolution/ControlGraph/: cyclic_right.dot  max_dig.dot  odd_dig.dot  sum_even.dot
lab-3/NumberUtilsSolution/app/: CMakeLists.txt  main.cpp
lab-3/NumberUtilsSolution/src/: CMakeLists.txt  NumberUtils.cpp  NumberUtils.h
lab-3/NumberUtilsSolution/tests/: CMakeLists.txt  test_number_utils.cpp
lab-3/project/: CMakeLists.txt  README.md
lab-3/project/correct_diagrams/: buildBFromOddDigits.dot  cyclicRightShift.dot  maxEvenPosDot.dot  sumEvenAboveSecDiag.dot
lab-3/project/diagrams/: buildBFromOddDigits.dot  cyclicRightShift.dot  maxEvenPosDot.dot  sumEvenAboveSecDiag.dot
lab-3/project/include/: MyLib.h
lab-3/project/src/: MyLib.cpp
lab-3/project/tests/: MyLibTests.cpp
lab-4/: report.md
lab-4/project/: CMakeLists.txt  README.md  gen_dot_pngs.sh
lab-4/project/correct_diagrams/: add_block.dot  constructor_block.dot  indexer_block.dot  min_block.dot  mul_block.dot  transp_block.dot
lab-4/project/diagrams/: add.dot  constructor.dot  eq.dot  indexer.dot  min.dot  mul.dot  transp.dot
lab-4/project/include/: Matrix.h
lab-4/project/src/: Matrix.cpp
lab-4/project/tests/: MatrixTests.cpp
lab-5/: report.md
lab-5/project/: CMakeLists.txt
lab-5/project/diagrams/: arithmetics.dot  checksame.dot  constructor.dot  setters.dot  unary.dot
lab-5/project/include/: TPNumber.h
lab-5/project/src/: TPNumber.cpp
lab-5/project/tests/: TPNumberTests.cpp
lab-6/: report.md
lab-6/project/: CMakeLists.txt
lab-6/project/diagrams/: addDigit.dot  addSign.dot  backspace.dot
lab-6/project/include/: UEditor.h
lab-6/project/src/: UEditor.cpp
lab-6/project/tests/: EditorTests.cpp
lab-7/: report.md
lab-7/project/: CMakeLists.txt
lab-7/project/diagrams/: Add.dot  Clear.dot  Store.dot
lab-7/project/include/: UMemory.h
lab-7/project/src/: main.cpp
lab-7/project/tests/: MemoryTests.cpp
lab-8/: report.md
lab-8/project/: CMakeLists.txt
lab-8/project/diagrams/: FuncRun.dot  OprtnRun.dot
lab-8/project/include/: UProc.h
lab-8/project/src/: main.cpp
lab-8/project/tests/: ProcTests.cpp
lab-9/: report.md
lab-9/project/: CMakeLists.txt
lab-9/project/diagrams/: Diff.dot  Mul.dot
lab-9/project/include/: UPoly.h
lab-9/project/src/: main.cpp
lab-9/project/tests/: PolyTests.cpp
